--- a/.github/actions/consentManagementIntegTests/action.yml
+++ b/.github/actions/consentManagementIntegTests/action.yml
@@ -47,35 +47,6 @@ runs:
         echo "CONSENT_API_RESOURCE_ID=${serviceUserConsentResourceId}" >> "$GITHUB_OUTPUT"
       shell: bash
 
-    - name: Test ListServiceUserConsents API
-      env:
-        API_GATEWAY_ID: ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }}
-        AWS_REGION: ${{ inputs.aws-region }}
-        CONSENTS_API_RESOURCE_ID: ${{ steps.get-consent-management-api-resource-ids.outputs.CONSENTS_API_RESOURCE_ID }}
-      run: |
-        listApiResponse=$(aws apigateway test-invoke-method \
-          --region "$AWS_REGION" \
-          --rest-api-id "$API_GATEWAY_ID" \
-          --resource-id "$CONSENTS_API_RESOURCE_ID" \
-          --http-method GET \
-          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents")
-        if [ "$(echo ${listApiResponse} | jq -e '.status == 200')" == "true" ]; then
-          echo "ListServiceUserConsents API invocation succeeded"
-        else
-          echo "ListServiceUserConsents API invocation failed, response: ${listApiResponse}"
-          exit 1
-        fi
-        listApiResponseBody=$(echo ${listApiResponse} | jq '.body')
-        returnedConsents=$(echo ${listApiResponseBody} | sed 's/\\"/"/g' | sed 's/^"//;s/"$//' | jq .data)
-        if [ "$(echo "${returnedConsents}" | jq 'type == "array"')" == "true" ]; then
-          echo "ListServiceUserConsents API validation passed: successfully returned an array of consents"
-        else
-          echo "ListServiceUserConsents API validation failed: did not return an array of consents"
-          echo "ListServiceUserConsents API response body: ${listApiResponseBody}"
-          exit 1
-        fi
-      shell: bash
-
     - name: Test CreateServiceUserConsent API
       id: create-service-user-consent
       env:
@@ -223,4 +194,39 @@ runs:
           exit 1
         fi
         echo "GetServiceUserConsent API validation after update passed: successfully returned the expected consent"
+      shell: bash
+
+    - name: Test ListServiceUserConsents API
+      env:
+        API_GATEWAY_ID: ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }}
+        AWS_REGION: ${{ inputs.aws-region }}
+        CONSENTS_API_RESOURCE_ID: ${{ steps.get-consent-management-api-resource-ids.outputs.CONSENTS_API_RESOURCE_ID }}
+        CREATED_CONSENT_ID: ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}
+      run: |
+        listApiResponse=$(aws apigateway test-invoke-method \
+          --region "$AWS_REGION" \
+          --rest-api-id "$API_GATEWAY_ID" \
+          --resource-id "$CONSENTS_API_RESOURCE_ID" \
+          --http-method GET \
+          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents")
+        if [ "$(echo ${listApiResponse} | jq -e '.status == 200')" == "true" ]; then
+          echo "ListServiceUserConsents API invocation succeeded"
+        else
+          echo "ListServiceUserConsents API invocation failed, response: ${listApiResponse}"
+          exit 1
+        fi
+        listApiResponseBody=$(echo ${listApiResponse} | jq '.body')
+        returnedConsents=$(echo ${listApiResponseBody} | sed 's/\\"/"/g' | sed 's/^"//;s/"$//' | jq .data)
+        if [ "$(echo "${returnedConsents}" | jq 'type == "array"')" != "true" ]; then
+          echo "ListServiceUserConsents API validation failed: did not return an array of consents"
+          echo "ListServiceUserConsents API response body: ${listApiResponseBody}"
+          exit 1
+        fi
+        consentWithExpectedId=$(echo $returnedConsents | jq --arg expectedConsentId "$CREATED_CONSENT_ID" '.[] | select(.consentId == $expectedConsentId)')
+        if [ "$(echo "${consentWithExpectedId}" | jq 'type == "object"')" != "true" ]; then
+          echo "ListServiceUserConsents API validation failed: did not include expected consent with consentId ${CREATED_CONSENT_ID}"
+          echo "ListServiceUserConsents API response body: ${listApiResponseBody}"
+          exit 1
+        fi
+        echo "ListServiceUserConsents API validation passed: successfully returned array of consents including the created consent"
       shell: bash
