--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
             ConsentDataStack \
             ConsentHistoryDataStack \
             ConsentHistoryProcessorStack \
+            ConsentHistoryApiStack \
             ConsentManagementApiStack \
             ConsentManagementMonitoringStack
         env:
