--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@
 # Prerequisites:
 # 1. Create AWS account and set up AWS CLI and local AWS credentials
 # 2. Follow set-up steps in DEVELOPMENT.md to deploy the CDK bootstrap stack and CodePipelineStack
-name: Deploy
+name: Deploy CDK Stack
 on:
   # Enable running workflow manually from GitHub Actions
   workflow_dispatch:
